--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="edge">
-    <title>ff-gank-vue</title>
+    <title>干货集市</title>
   </head>
   <body>
     <div id="app"></div>
